I changed the name of the data file, and then ran the analysis code to determine the biggest airlines.

--- a/analysis/Flights Homework.Rmd
+++ b/analysis/Flights Homework.Rmd
@@ -13,7 +13,7 @@ library(ggplot2)
 ```
 
 ```{r}
-thisfile=here("data_raw","DL_SelectFields.zip")
+thisfile=here("data_raw","DL_SelectFields2022.zip")
 df2019<-read_csv(thisfile) %>% clean_names()
 ```
 
